@@ -4,6 +4,7 @@ Requires:
 New features:
 ~~~~~~~~~~~~~
 - make it possible import roots recursively
+- make it possible to import i18n description of documents
 Bug fixes:
 ~~~~~~~~~~
 -
